<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.coveros.demo</groupId>
  <artifactId>helloworld</artifactId>
  <version>1.1</version>
<!--   <packaging>jar</packaging> -->

  <name>Hello World</name>
  <description>The most basic of Java programs.</description>
  <url>https://www.coveros.com/</url>
  <inceptionYear>2018</inceptionYear>
  
  
  <dependencies>
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
        <scope>test</scope>
    </dependency>
  </dependencies>
  
  
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jdk.version>1.8</jdk.version>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>  
    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
  </properties>

  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.17</version>
            <configuration>
                <forkCount>5</forkCount> <!-- changed this to 0 -->
                <argLine>@{argLine} -Xmx1024m </argLine>
                <reuseForks>false</reuseForks>
                <execution>
                <id>default-prepare-agent</id>
                <goals>
                   <goal>prepare-agent</goal>
                </goals>
                </execution>
                <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
                <printSummary>true</printSummary>
                <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->

                <!-- run test in headless mode -->
                <systemPropertyVariables>
                    <glass.platform>Monocle</glass.platform>
                    <monocle.platform>Headless</monocle.platform>
                    <prism.order>d3d</prism.order>
                </systemPropertyVariables>

                <argLine>
                    --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                </argLine>
            </configuration>
        </plugin>
         <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.2</version>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>jacoco-report</id>
              <phase>test</phase>
              <goals>
                <goal>report</goal>
              </goals>
              <!-- default target/jscoco/site/* -->
              <configuration>
                <outputDirectory>target/jacoco/</outputDirectory>
              </configuration>
            </execution>
          </executions>
        </plugin>
    </plugins>
  </build>
</project>
